# MRV

./: README.md
hw/rtl/common/: defines.sv  xrv_ff_one.sv  xrv_queue.sv  xrv_rv16_expander.sv  xrv_rv_idecoder.sv
hw/rtl/mtcore/: mrv1_core.sv  mrv1_csrf.sv  mrv1_exec.sv  mrv1_idecode.sv  mrv1_idecoder.sv  mrv1_ifbuf.sv  mrv1_ifetch.sv  mrv1_int_fu.sv  mrv1_issue.sv  mrv1_issue_tw_sched.sv  mrv1_lsu.sv  mrv1_mul_fu.sv  mrv1_popcnt.sv  mrv1_retire.sv  mrv1_rf.sv  mrv1_src_mux.sv  mrv1_sys_fu.sv  mrv1_th_ctl.sv  mrv1_th_issue.sv  mrv1_th_sched.sv  mrv1_tw_ctl.sv  mrv1_tw_sched.sv  xrv1_core.sv  xrv1_csrf.sv  xrv1_retire.sv
hw/rtl/pkg/: mrv1_pkg.sv  xrv1_pkg.sv
hw/rtl/ucore/: xrv1_alu.sv  xrv1_branch.sv  xrv1_branch_spec.sv  xrv1_core.sv  xrv1_csr.sv  xrv1_div.sv  xrv1_ialigner.sv  xrv1_idecode.sv  xrv1_ifetch.sv  xrv1_ifq.sv  xrv1_iqueue.sv  xrv1_lsu.sv  xrv1_mul.sv  xrv1_retire.sv  xrv1_rf.sv  xrv1_rv16_expander.sv  xrv1_shifter.sv
hw/tb/: mrv1_sim_tcm.sv  mrv1_sim_top.sv  xrv1_sim_tcm.sv  xrv1_sim_top.sv
sw/: CMakeLists.txt
sw/dut/: dut.py  model_test.h  xrv1
sw/src/mrv1/: CMakeLists.txt
sw/src/sim/: elf_loader.cpp  elf_loader.hpp  main.cpp  memory_base.hpp  python_export.cpp  xrv1_rst_gen.hpp  xrv1_soc.cpp  xrv1_soc.hpp  xrv1_tb.cpp  xrv1_tb.hpp  xrv1_top.cpp  xrv1_top.hpp
sw/src/tb/: xrv1_sim_ram.sv  xrv1_sim_top.sv
